Fixed portfolio alignment

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ hr {
 
 .work {
 	padding: 2% .5% 1%;
-	margin: 0 0 2.5% 3%;
+	margin: 0 0 2.5% 3.2%;
 	display:none;
 	float: left;
 	width: 28%;
